<resources>
    <string name="app_name">Train Times</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Train Times</string>
    <string name="nav_header_subtitle">Powered by Real Time Trains</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="fragment_home_title">Home</string>
    <string name="fragment_active_journey_title">Active Journey</string>
    <string name="fragment_saved_journey_title">Saved Journeys</string>
    <string name="fragment_settings_title">Settings</string>
    <string name="fragment_about_title">About</string>

    <string name="fragment_stationDetails_title">Station Detail</string>
    <string name="fragment_serviceDetails_title">Service Detail</string>

    <string name="menu_main_search">Search</string>
    <string name="menu_search">Search</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_voice_rec" />
    <string name="action_location" />
    <string name="platform">Plat.</string>
    <string name="action_stationDetails_filter">Filter</string>
    <string name="action_generic_refresh">Refresh</string>
    <string name="stationDetails_setFilter">Apply Filter</string>
    <string name="stationDetails_remFilter">Reset</string>
    <string name="stationDetails_FilterMessage">Set Filter</string>
    <string name="dialog_filter_loc_radio_none">No Filter</string>
    <string name="dialog_filter_loc_radio_from">From:</string>
    <string name="dialog_filter_loc_radio_to">To:</string>
    <string name="dialog_filter_loc_checkbox">Location</string>
    <string name="dialog_filter_date_checkbox">Date</string>
    <string name="dialog_filter_time_checkbox">Time</string>
    <string name="dialog_filter_defaultLocationText">Location</string>
    <string name="no_matching_services">No Services Found</string>
    <string name="action_serviceDetails_timeToggle">Change View</string>
    <string name="action_serviceDetails_timeToggle_Realtime">Realtime Data</string>
    <string name="action_serviceDetails_timeToggle_Booked">Timetabled Data</string>
    <string name="action_serviceDetails_timeToggle_None">Hidden</string>
    <string name="Cancelled">Cancelled (%1$s)</string>
    <string name="Unknown">Unknown</string>
    <string name="newJourneyDynamic">Dynamic (Next Available Service)</string>
    <string name="newJourneyDepart">Depart at:</string>
    <string name="newJourneyArrive">Arrive By:</string>
    <string name="newJourneyAddMode">Create Journey</string>
    <string name="fragment_new_journey_title">Create Journey</string>
    <string name="newJourneyEditMode">Edit Journey</string>
    <string name="fragment_newJourney_Origin">Origin</string>
    <string name="fragment_newJourney_Via">Via</string>
    <string name="fragment_newJourney_Destination">Destination</string>
    <string name="newJourney_Timing">Timing</string>
    <string name="newJourney_JourneyName">Journey Name</string>
    <string name="newJourney_StationStops">Stations</string>
    <string name="newJourneyErrorNoStations">A journey must contain at least 2 stations.</string>
    <string name="action__savedJourneys_edit">Edit</string>
    <string name="savedJourneys_EditModeOn">Editing Enabled</string>
    <string name="savedJourneys_EditModeOff">Editing Disabled</string>
    <string name="savedJourneys_Dynamic">Dynamic</string>
    <string name="savedJourneys_DepartAt">Depart\nat\n%1$s</string>
    <string name="savedJourneys_ArriveBy">Arrive\nby\n%1$s</string>
    <string name="activeJourneyConnectionTitle">Next Connection Details</string>
    <string name="activeJourneyConnectionTitle2">%1$s to %2$s Connection Details</string>
    <string name="activeJourneyListItemTitle">Train 1</string>
    <string name="activeJourneyNoActiveJourney">No journey is currently active.</string>
    <string name="activeJourneySelectOrCreateJourney">Select or Create a Journey</string>
    <string name="serviceDetailsTrainJoin">Joins Another Service Here</string>
    <string name="serviceDetailsTrainDivide">Train Divides Here</string>
    <string name="serviceDetailsTrainServiceTo">Service divides here to %1$s</string>
    <string name="serviceDetailsTrainServiceContinues">Continues to %1$s</string>
    <string name="serviceDetailsTrainServiceJoinsAnother">Joins Another Service Here</string>
    <string name="serviceDetailsTrainServiceFrom">Joins service from %1$s</string>
    <string name="serviceDetailsTrainServiceDivided">Service divided here (%1$s)</string>
    <string name="activeJourneyConnectionPlaceChange">Changing at %1$s</string>
    <string name="activeJourneyConnectionPlaceDepart">Departing from %1$s</string>
    <string name="activeJourneyConnectionPlaceArrive">Arriving at %1$s</string>


    <string name="activeJourneyChangeAt">Change at %1$s in %2$s</string>
    <string name="savedJourneys_Dialog_OverwriteTitle">Existing Journey</string>
    <string name="savedJourneys_Dialog_OverwriteMessage">A journey is already being monitored. Would you like to replace it?</string>
    <string name="savedJourneys_Dialog_OverwritePositive">Yes</string>
    <string name="savedJourneys_Dialog_OverwriteNegative">No</string>
    <string name="newJourney_TimeForChanges">Allow time for changes:</string>
    <string name="newJourney_TimeForChangesSuffix">Minutes</string>
    <string name="activeJourneyLoadedPreviousTrue">Loaded a Previous Journey</string>
    <string name="activeJourneyLoadedPreviousFalse">Planning Journey</string>
    <string name="updatedXMins">Updated %1$s ago.</string>
    <string name="activeJourneyService">Service %1$s</string>
    <string name="activeJourneyService1">Service 1</string>
    <string name="activeJourneyService2">Service 2</string>
    <string name="activeJourneyService1Arrives">Arrives: %1$s</string>
    <string name="activeJourneyService1Platform">Platform %1$s</string>
    <string name="activeJourneyService2Departs">Departs: %1$s</string>
    <string name="activeJourneyService2Platform">Platform %1$s</string>
    <string name="activeJourneyReplan">Re-Plan Journey</string>
    <string name="activeJourneyEnd">End Journey</string>
    <string name="activeJourneyEndTitle">End this Journey?</string>
    <string name="activeJourneyEndMessage">This will remove all services related to this journey.</string>
    <string name="activeJourneyEndPositive">Remove</string>
    <string name="activeJourneyEndNegative">Cancel</string>
    <string name="activeJourneyReplanTitle">Re-plan journey?</string>
    <string name="activeJourneyReplanhMessage">This will re-calculated required services to complete the journey. \nYou may want to recalculate a single service instead.</string>
    <string name="activeJourneyReplanPositive">Continue</string>
    <string name="activeJourneyReplanNegative">Cancel</string>
    <string name="activeJourneyPartialRefreshTitle">Re-Plan Journey from this point on?</string>
    <string name="activeJourneyPartialRefreshMessage">This will recalculate this and future services in the journey. This is useful if there is a delay.</string>
    <string name="activeJourneyPartialRefreshPositive">Continue</string>
    <string name="activeJourneyPartialRefreshNegative">Cancel</string>
    <string name="UnknownPlat">\?</string>
    <string name="bus">Bus</string>
    <string name="ok">OK</string>
    <string name="homeFavouriteJourneys">Favourite Journeys</string>
    <string name="homeSavedJourneys">Saved Journeys</string>
    <string name="homeMapTitle">Map</string>
    <string name="noLocation">Could not obtain location</string>
    <string name="requiresLocationInfo">Finding nearest station requires Location Permission</string>
    <string name="aboutText">Service and Platform information provided by RealTimeTrains.co.uk\n\nIcon made by Freepik from www.flaticon.com\n\nContains public sector information licensed under the Open Government Licence v3.0.</string>

    <string name="shortcutActiveJourneyShort">Active Journey</string>
    <string name="shortcutActiveJourneyLong">Active Journey</string>
    <string name="shortcutActiveJourneyDisabled">Nope</string>
    <string name="shortcutSavedJourneysShort">Saved Journeys</string>
    <string name="shortcutSavedJourneysLong">Saved Journeys</string>
    <string name="shortcutSavedJourneyDsisabled">Nope</string>

    <string name="serviceDetailsLegendDelay">Delay</string>
    <string name="serviceDetailsLegendRTDepart">RT Dep</string>
    <string name="serviceDetailsLegendTArrival">RT Arr</string>
    <string name="serviceDetailsLegendTTDepart">TT Dep</string>
    <string name="serviceDetailsLegendTTArrival">TT Arr</string>
    <string name="serviceDetailsLegendRTHint">Real Time (Estimated) Arrival/Departure</string>
    <string name="serviceDetailsLegendTTHint">Time Tabled Arrival/Departure</string>
    <string name="action_serviceDetails_onMap">Show on Map</string>
    <string name="action_activeJourney_onMap">Map</string>
    <string name="JOURNEYNOTIFYCHANNEL">Journey Updates</string>
    <string name="JOURNEYNOTIFYCHANNEL_Desc">Notification when an Active Journey requires attention.</string>
    <string name="preference_JourneyPlanningCategory">Journeys</string>
    <string name="preference_OtherCategory">Other</string>
    <string name="preference_theme_title">Override Theme</string>
    <string name="preference_theme_dialog_title">Select Theme</string>
    <string name="preference_jp_default_changetime_title">Minimum Change Time in Minutes</string>
    <string name="preference_jp_default_changetime_summary">Default value. Can be overidden on a per Journey Basis</string>
    <string name="preference_jp_default_changetime_dialog">Minimum Change Time in Minutes</string>

    <string name="preference_jp_refresh_every_title">Journey Refresh Interval</string>
    <string name="preference_jp_refresh_every_summary">Interval in minutes to refresh timing information on an active journey.</string>
    <string name="preference_refresh_every_dialog">Journey Refresh Interval (in Minutes)</string>
    <string name="preference_jp_automatic_refresh_title">Automatically Refresh Active Journey</string>
    <string name="preference_jp_automatic_refresh_summary">Automatically refresh journey timing information in background.</string>

    <string name="notification_change_title">Upcoming Connection</string>
    <string name="notification_change_short">Changing at %1$s in %2$s minutes. (%3$s)</string>
    <string name="preference_jp_notify_title">Notify Before Change</string>
    <string name="preference_jp_notify_summary">Send a notification before a scheculed change.</string>
    <string name="preference_jp_notify_time_title">Time Before Change</string>
    <string name="preference_jp_notify_time_summary">Warning time in minutes before a change is scheduled.</string>
    <string name="preference_notify_time_dialog">Warning Time (in Minutes)</string>
    <string name="preference_map_focus_title">Map Focus</string>
    <string name="preference_map_focus_dialog_title">Map Focus</string>
    <string name="preference_map_focus_summary">Choose the default view when opening the map.</string>
    <string name="action_stationDetails_map">View Station Map</string>

    <plurals name="minutesTime">
        <item quantity="zero">just now</item>
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="activeJourneyChangeAt2">
        <item quantity="zero">Change at %1$s now.</item>
        <item quantity="one">Change at %1$s in %2$d minute.</item>
        <item quantity="other">Change at %1$s in %2$d minutes.</item>
    </plurals>
</resources>
