<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/fragment_home_title" />
        <item
            android:id="@+id/nav_active_journey"
            android:icon="@drawable/ic_train_black_24dp"
            android:title="@string/fragment_active_journey_title" />
        <item
            android:id="@+id/nav_saved_journeys"
            android:icon="@drawable/ic_directions_black_24dp"
            android:title="@string/fragment_saved_journey_title" />
    </group>

    <item android:title="Test">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/fragment_settings_title" />
            <item
                android:id="@+id/nav_menu_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/fragment_about_title" />
        </menu>
    </item>

</menu>
