<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_activeJourneyRefresh"
        android:title="@string/action_generic_refresh"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_refresh_black_24dp"
        app:iconTint="#FFFFFF"
        />

    <item
        android:id="@+id/action_activeJourneyReplan"
        android:orderInCategory="100"
        android:title="@string/activeJourneyReplan"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_activeJourneyEnd"
        android:orderInCategory="100"
        android:title="@string/activeJourneyEnd"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"
        />
</menu>