<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:id="@+id/action_serviceDetails_onMap"
        android:title="@string/action_serviceDetails_onMap"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_map_black_24dp"
        app:iconTint="#FFFFFF"
        />

    <item android:id="@+id/action_serviceDetails_timeToggle"
        android:title="@string/action_serviceDetails_timeToggle"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_access_time_black_24dp"
        app:iconTint="#FFFFFF"
        />

    <item android:id="@+id/action_serviceDetails_refresh"
        android:title="@string/action_generic_refresh"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_refresh_black_24dp"
        app:iconTint="#FFFFFF"
        />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"

        />
</menu>
