<shortcuts xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="Active Journey"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher_activejourney"
        android:shortcutShortLabel="@string/shortcutActiveJourneyShort"
        android:shortcutLongLabel="@string/shortcutActiveJourneyLong"
        android:shortcutDisabledMessage="@string/shortcutActiveJourneyDisabled"
        tools:targetApi="n_mr1">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="traintimes://activeJourney"
            android:targetPackage="com.anfantanion.traintimes1"
            android:targetClass="com.anfantanion.traintimes1.MainActivity"
            />
        <!-- If your shortcut is associated with multiple intents, include them
             here. The last intent in the list determines what the user sees when
             they launch this shortcut. -->
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="Saved Journeys"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher_savedjourneys"
        android:shortcutShortLabel="@string/shortcutSavedJourneysShort"
        android:shortcutLongLabel="@string/shortcutSavedJourneysLong"
        android:shortcutDisabledMessage="@string/shortcutActiveJourneyDisabled"
        tools:targetApi="n_mr1">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="traintimes://savedJourneys"
            android:targetPackage="com.anfantanion.traintimes1"
            android:targetClass="com.anfantanion.traintimes1.MainActivity"
            />
        <!-- If your shortcut is associated with multiple intents, include them
             here. The last intent in the list determines what the user sees when
             they launch this shortcut. -->
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <!-- Specify more shortcuts here. -->
</shortcuts>