<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            >

            <TextView
                android:id="@+id/activeJourneyConnectionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/activeJourneyConnectionTitle"
                android:textColor="@color/colorSubtitleText"
                />

            <TextView
                android:id="@+id/activeJourneyConnectionTitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="Changing at Clapham Junction"
                android:textColor="@color/colorTitleText"
                android:layout_below="@id/activeJourneyConnectionTitle"
                />

            <LinearLayout
                android:id="@+id/activeJourneyConnectionService1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/activeJourneyConnectionTitle2"
                >

                <TextView
                    android:id="@+id/activeJourneyService1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTitleText"
                    android:text="@string/activeJourneyService1"
                    android:textSize="20sp"
                    android:paddingEnd="5sp"
                    />

                <TextView
                    android:id="@+id/activeJourneyService1Arrives"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTitleText"
                    android:text="@string/activeJourneyService1Arrives"
                    android:textSize="20sp"
                    android:paddingEnd="5sp"
                    />

                <TextView
                    android:id="@+id/activeJourneyService1Platform"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTitleText"
                    android:textSize="20sp"
                    android:text="@string/activeJourneyService1Platform"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/activeJourneyConnectionDeparting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/activeJourneyConnectionService1"
                >

                <TextView
                    android:id="@+id/activeJourneyService2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTitleText"
                    android:text="@string/activeJourneyService2"
                    android:textSize="20sp"
                    android:paddingEnd="5sp"
                    />

                <TextView
                    android:id="@+id/activeJourneyService2Departs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTitleText"
                    android:text="@string/activeJourneyService2Departs"
                    android:textSize="20sp"
                    android:paddingEnd="5sp"
                    />

                <TextView
                    android:id="@+id/activeJourneyService2Platform"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTitleText"
                    android:textSize="20sp"
                    android:text="@string/activeJourneyService2Platform"
                    />
            </LinearLayout>


        </RelativeLayout>

</LinearLayout>