<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="20dp"
        android:animateLayoutChanges="true"
        >


        <CheckBox
            android:id="@+id/dialog_filter_loc_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_filter_loc_checkbox" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/dialog_filter_loc_linearlayout"
            android:visibility="gone"
            android:animateLayoutChanges="true"
            >
            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/dialog_filter_loc_radio_from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_filter_loc_radio_from" />
                <RadioButton android:id="@+id/dialog_filter_loc_radio_to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_filter_loc_radio_to"
                    android:checked="true"
                    />
            </RadioGroup>

            <EditText
                android:id="@+id/dialog_filter_loc_textedit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_filter_defaultLocationText"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:visibility="visible"
                android:inputType="none"
                android:focusable="false"
                >

            </EditText>




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <CheckBox
                android:id="@+id/dialog_filter_date_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_filter_date_checkbox" />

            <EditText
                android:id="@+id/dialog_filter_date_textedit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2020-01-01"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:visibility="invisible"
                android:inputType="none"
                android:focusable="false"
                >

            </EditText>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <CheckBox
                android:id="@+id/dialog_filter_time_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_filter_time_checkbox" />

            <EditText
                android:id="@+id/dialog_filter_time_textedit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1400"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                tools:ignore="HardcodedText"
                android:visibility="invisible"
                android:inputType="none"
                android:focusable="false"
                >


            </EditText>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>